--- a/src/App.css
+++ b/src/App.css
@@ -2,10 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
+  @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap');
+
 @layer base{
   :root{
     margin: 0;
     box-sizing: border-box;
+    font-family: Poppins;
   }
   h1{
     @apply m-0 text-2xl text-slate-200 font-bold py-3 md:text-3xl lg:text-4xl capitalize
